--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,11 +37,12 @@ variables:
 ################################################################
 # Defined Pipeline Stages
 stages:
+    - deploy
     - quality
     - basic
     - advanced
     - variants
-    - deploy
+#     - deploy
 
 ################################################################
 # Functional Tests
@@ -222,22 +223,34 @@ Dol-Dev-Quality:
 ## Build Documentation
 #################################################################
 pages:
-    image:      registry.gitlab.com/splashsync/php-console:pages
+    image:      jekyll/minimal:latest
     stage:      deploy
-    tags:       ['Dedicated']
-    retry:      2
-    services:
-        - docker:dind
+    tags:       [ Dedicated-Docker ]
     ################################################################################
     # Run Test Script
     script:
-        # Run Composer to Build deps
-        - curl -s https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/ci/composer.sh  | bash
-        # Build Documentation
-        - php splash/vendor/bin/grumphp run --tasks=build-docs
+        - wget -qO - https://gitlab.com/badpixxel-robo/jekyll/-/raw/main/scripts/gitlab-pages.sh | sh
     artifacts:
         paths:
             - public
+
+#     image:      registry.gitlab.com/splashsync/php-console:pages
+#     stage:      deploy
+#     tags:       ['Dedicated']
+#     retry:      2
+#     services:
+#         - docker:dind
+#     ################################################################################
+#     # Run Test Script
+#     script:
+#         # Run Composer to Build deps
+#         - curl -s https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/ci/composer.sh  | bash
+#         # Build Documentation
+#         - php splash/vendor/bin/grumphp run --tasks=build-docs
+#     artifacts:
+#         paths:
+#             - public
+
 
 #################################################################
 ## Build Documentation
