--- a/grumphp/phpstan.neon
+++ b/grumphp/phpstan.neon
@@ -34,3 +34,6 @@ parameters:
         # Fix for Dolibarr V12
         - '#Method ProductAttributeValue::delete\(\) invoked with 1 parameter, 0 required#'
         - '#Method Adherent::load_board\(\) invoked with 2 parameters, 1 required#'
+
+        # Fix for Dolibarr V17
+        - '#Method ProductCombination2ValuePair::create\(\) invoked with 1 parameter, 0 required#'
