--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@
 # 172.100.0.15        v15.dolibarr.local
 # 172.100.0.16        v16.dolibarr.local
 # 172.100.0.17        v17.dolibarr.local
+# 172.100.0.18        v18.dolibarr.local
 # 172.100.0.99        latest.dolibarr.local
 # 172.100.0.100       toolkit.dolibarr.local
 # 172.100.0.101       db.dolibarr.local
@@ -87,10 +88,10 @@ services:
             splashsync:    { aliases: [ latest.dolibarr.local ] }
 
     ################################################################################
-    # Dolibarr V16
-    dol-16:
-        image: tuxgasy/dolibarr:16
-        container_name: v16.dolibarr.local
+    # Dolibarr V18
+    dol-18:
+        image: tuxgasy/dolibarr:18
+        container_name: v18.dolibarr.local
         depends_on:
             - mysql
         links:
@@ -99,22 +100,22 @@ services:
         environment:
             - "DOLI_DB_TYPE=mysqli"
             - "DOLI_DB_HOST=mysql"
-            - "DOLI_DB_NAME=dolibarr16"
+            - "DOLI_DB_NAME=dolibarr18"
             - "DOLI_DB_USER=root"
             - "DOLI_DB_PASSWORD=dolibarr"
             - "DOLI_ADMIN_LOGIN=Admin"
             - "PHP_MEMORY_LIMIT=-1"
-            - SPLASH_WS_ID=ThisIsDol16Key
+            - SPLASH_WS_ID=ThisIsDol18Key
             - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
             - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
         volumes:
             - "./:/var/www/html/custom/"
             - "./.git/:/var/www/html/custom/.git/"
         entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
-        hostname: v16.dolibarr.local
+        hostname: v18.dolibarr.local
         networks:
-            dolibarr:      { ipv4_address: 172.100.0.16 }
-            splashsync:    { aliases: [ v16.dolibarr.local ] }
+            dolibarr:      { ipv4_address: 172.100.0.18 }
+            splashsync:    { aliases: [ v18.dolibarr.local ] }
 
     ################################################################################
     # Dolibarr V17
@@ -145,6 +146,37 @@ services:
         networks:
             dolibarr:      { ipv4_address: 172.100.0.17 }
             splashsync:    { aliases: [ v17.dolibarr.local ] }
+
+    ################################################################################
+    # Dolibarr V16
+    dol-16:
+        image: tuxgasy/dolibarr:16
+        container_name: v16.dolibarr.local
+        depends_on:
+            - mysql
+        links:
+            - mysql
+        working_dir:    /var/www/html/custom
+        environment:
+            - "DOLI_DB_TYPE=mysqli"
+            - "DOLI_DB_HOST=mysql"
+            - "DOLI_DB_NAME=dolibarr16"
+            - "DOLI_DB_USER=root"
+            - "DOLI_DB_PASSWORD=dolibarr"
+            - "DOLI_ADMIN_LOGIN=Admin"
+            - "PHP_MEMORY_LIMIT=-1"
+            - SPLASH_WS_ID=ThisIsDol16Key
+            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
+            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
+        volumes:
+            - "./:/var/www/html/custom/"
+            - "./.git/:/var/www/html/custom/.git/"
+        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
+        hostname: v16.dolibarr.local
+        networks:
+            dolibarr:      { ipv4_address: 172.100.0.16 }
+            splashsync:    { aliases: [ v16.dolibarr.local ] }
+
 
     ################################################################################
     # Dolibarr V15
