WIP: CI/CD Optimization

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,15 @@
 ################################################################################
 
 ################################################################
+# Include Pipeline Templates
+include:
+    - remote: 'https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/gitlab/module.yaml'
+    - remote: 'https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/gitlab/pages.yaml'
+
+################################################################
 # Select image from https://hub.docker.com/_/php/
 image:  tuxgasy/dolibarr:17
+
 ################################################################
 # Set any variables we need
 variables:
@@ -38,11 +45,12 @@ variables:
 ################################################################
 # Defined Pipeline Stages
 stages:
+    - Build
     - quality
     - basic
     - advanced
     - variants
-    - deploy
+#    - Build
 
 ################################################################
 # Functional Tests
@@ -248,36 +256,36 @@ Dol-14-Quality:
 #    allow_failure:  true
 #    <<: *code_quality
 
-################################################################
-# Build Documentation
-################################################################
-pages:
-    image:      jekyll/minimal:latest
-    stage:      deploy
-    tags:       [ Dedicated ]
-    ################################################################################
-    # Run Test Script
-    script:
-        - wget -qO - https://gitlab.com/badpixxel-robo/jekyll/-/raw/main/scripts/gitlab-pages.sh | sh
-    artifacts:
-        paths:
-            - public
-
-################################################################
-# Build Module
-################################################################
-module:
-    image:      registry.gitlab.com/splashsync/php-console:pages
-    stage:      deploy
-    tags:       ['Dedicated']
-    retry:      2
-    ################################################################################
-    # Run Test Script
-    script:
-        # Run Composer to Build deps
-        - curl -s https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/ci/composer.sh  | bash
-        # Build Documentation
-        - php splash/vendor/bin/grumphp run --tasks=build-module
-    artifacts:
-        paths:
-            - build
+#################################################################
+## Build Documentation
+#################################################################
+#pages:
+#    image:      jekyll/minimal:latest
+#    stage:      deploy
+#    tags:       [ Dedicated ]
+#    ################################################################################
+#    # Run Test Script
+#    script:
+#        - wget -qO - https://gitlab.com/badpixxel-robo/jekyll/-/raw/main/scripts/gitlab-pages.sh | sh
+#    artifacts:
+#        paths:
+#            - public
+#
+#################################################################
+## Build Module
+#################################################################
+#module:
+#    image:      registry.gitlab.com/splashsync/php-console:pages
+#    stage:      deploy
+#    tags:       ['Dedicated']
+#    retry:      2
+#    ################################################################################
+#    # Run Test Script
+#    script:
+#        # Run Composer to Build deps
+#        - curl -s https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/ci/composer.sh  | bash
+#        # Build Documentation
+#        - php splash/vendor/bin/grumphp run --tasks=build-module
+#    artifacts:
+#        paths:
+#            - build
