--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@
 # 172.100.0.16        v16.dolibarr.local
 # 172.100.0.17        v17.dolibarr.local
 # 172.100.0.18        v18.dolibarr.local
+# 172.100.0.19        v19.dolibarr.local
 # 172.100.0.99        latest.dolibarr.local
 # 172.100.0.100       toolkit.dolibarr.local
 # 172.100.0.101       db.dolibarr.local
@@ -86,6 +87,36 @@ services:
         networks:
             dolibarr:      { ipv4_address: 172.100.0.99 }
             splashsync:    { aliases: [ latest.dolibarr.local ] }
+
+    ################################################################################
+    # Dolibarr V19
+    dol-19:
+        image: tuxgasy/dolibarr:19
+        container_name: v19.dolibarr.local
+        depends_on:
+            - mysql
+        links:
+            - mysql
+        working_dir:    /var/www/html/custom
+        environment:
+            - "DOLI_DB_TYPE=mysqli"
+            - "DOLI_DB_HOST=mysql"
+            - "DOLI_DB_NAME=dolibarr19"
+            - "DOLI_DB_USER=root"
+            - "DOLI_DB_PASSWORD=dolibarr"
+            - "DOLI_ADMIN_LOGIN=Admin"
+            - "PHP_MEMORY_LIMIT=-1"
+            - SPLASH_WS_ID=ThisIsDol19Key
+            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
+            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
+        volumes:
+            - "./:/var/www/html/custom/"
+            - "./.git/:/var/www/html/custom/.git/"
+        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
+        hostname: v19.dolibarr.local
+        networks:
+            dolibarr:      { ipv4_address: 172.100.0.19 }
+            splashsync:    { aliases: [ v19.dolibarr.local ] }
 
     ################################################################################
     # Dolibarr V18
