WIP: Dolibarr V20 Compat

--- a/docker/toolkit/splash.yaml
+++ b/docker/toolkit/splash.yaml
@@ -35,6 +35,21 @@ splash:
                 WsPath:             /custom/splash/vendor/splash/phpcore/soap.php
 
         ########################################################################
+        # Dolibarr V20
+        dol-20:
+            id:                 ThisIsDol20Key
+            key:                ThisTokenIsNotSoSecretChangeIt
+            name:               Dolibarr 20
+            host:               false
+            connector:          soap
+            config:
+                Extended:           true
+                WsIdentifier:       ThisIsDol20Key
+                WsEncryptionKey:    ThisTokenIsNotSoSecretChangeIt
+                WsHost:             http://v20.dolibarr.local
+                WsPath:             /custom/splash/vendor/splash/phpcore/soap.php
+
+        ########################################################################
         # Dolibarr V19
         dol-19:
             id:                 ThisIsDol19Key
